updating properties list page
